NOJIRA bytt til PDL (#1927)
* NOJIRA bytt til PDL

* NOJIRA riktig konstant